@@ -1,0 +1,11 @@
+
+# question: how do we get the following to be built but not installed?
+bin_PROGRAMS = example
+example_SOURCES = example.cc
+example_LDADD = libCmdLine.a
+
+lib_LIBRARIES = libCmdLine.a
+libCmdLine_a_SOURCES = CmdLine.cc
+
+include_HEADERS = CmdLine.hh
+
